--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     
 </body>
-<script src="./app.js"> </script>
+<!-- <script src="./app.js"> </script> -->
+<script src="./practice.js"></script>
 </html>
