--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     
 </body>
 <!-- <script src="./app.js"> </script> -->
-<script src="./practice.js"></script>
+<!-- <script src="./practice.js"></script> -->
+<script src="./practice_array.js"></script>
 </html>
