doing big_O_Notation and time complexity

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </body>
 <!-- <script src="./app.js"> </script> -->
 <!-- <script src="./practice.js"></script> -->
-<script src="./practice_array.js"></script>
+<!-- <script src="./practice_array.js"></script> -->
+<script src="./big_O_notation.js"></script>
 </html>
