solving some string problem

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </body>
 <!-- <script src="./app.js"> </script> -->
 <!-- <script src="./practice.js"></script> -->
-<script src="./practice_array.js"></script>
+<!-- <script src="./practice_array.js"></script> -->
 <!-- <script src="./big_O_notation.js"></script> -->
+<script src="practice_string.js"></script>
 </html>
