solving some more dsa and others

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <!-- <script src="./practice.js"></script> -->
 <!-- <script src="./practice_array.js"></script> -->
 <!-- <script src="./big_O_notation.js"></script> -->
-<script src="practice_string.js"></script>
+<!-- <script src="practice_string.js"></script> -->
+<script src="kadane`s_algo.js"></script>
 </html>
